--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-miths<!doctype html>
+<!doctype html>
 <html>
   <head>
     <title>The Smiths webpage!</title>
   </head>
   <body>
-    <p>Something is starting . Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>Something is starting . <strong>Starting!</strong> </p>
   </body>
 </html>
